--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
-<head>
-    <title>aa</title>
-
-
-</head>
-<body>
-    <p style="color: darkblue; font-size: 2rem; text-align: center; font: larger;">Mərcan</p>
-    
-</body>
-
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Örnek Site</title>
+    <style>
+      /* CSS burada */
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+      header {
+        background-color: #333;
+        color: white;
+        padding: 20px;
+        text-align: center;
+      }
+      nav {
+        background-color: #666;
+        color: white;
+        display: flex;
+        justify-content: space-between;
+        padding: 10px;
+      }
+      nav ul {
+        display: flex;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
+      nav ul li a {
+        color: white;
+        padding: 10px;
+        text-decoration: none;
+      }
+      nav ul li a:hover {
+        background-color: #999;
+      }
+      section {
+        padding: 20px;
+      }
+      footer {
+        background-color: #ccc;
+        color: #333;
+        padding: 10px;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>Örnek Site</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="#">Anasayfa</a></li>
+        <li><a href="#">Hakkımızda</a></li>
+        <li><a href="#">Hizmetler</a></li>
+        <li><a href="#">İletişim</a></li>
+      </ul>
+      <form action="#" method="get">
+        <input type="text" placeholder="Ara...">
+        <button type="submit">Ara</button>
+      </form>
+    </nav>
+    <section>
+      <h2>Bölüm Başlığı</h2>
+      <p>Bu bir örnek bölüm. Buraya sitenizle ilgili bilgi veya içerik ekleyebilirsiniz.</p>
+    </section>
+    <section>
+      <h2>Başka Bir Bölüm Başlığı</h2>
+      <p>Bu da başka bir örnek bölüm. Buraya sitenizle ilgili farklı bir içerik ekleyebilirsiniz.</p>
+    </section>
+    <footer>
+      <p>Telif Hakkı © 2023 Örnek Site</p>
+    </footer>
+  </body>
 </html>
+
